--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
-    --fundo :#332013;
-    --cartao-frente: #14141b;
-    --cartao-verso: #000000;
+    --fundo :#aae7ff;
+    --cartao-frente: #899da8;
+    --cartao-verso: #07abdd;
     --destaque: #4b4658;
     --preto: #000000;
     --branco: #ffffff;
