--- a/projeto2.css
+++ b/projeto2.css
@@ -1,8 +1,8 @@
 :root{
-    --fundo :#332013;
-    --cartao-frente: #14141b;
+    --fundo :#377679;
+    --cartao-frente: #aaaaff;
     --cartao-verso: #000000;
-    --destaque: #4b4658;
+    --destaque: #8f62ff;
     --preto: #000000;
     --branco: #ffffff;
 }
