--- a/style.css
+++ b/style.css
@@ -1,88 +1,97 @@
 :root{
-    --fundo :#aae7ff;
-    --cartao-frente: #899da8;
-    --cartao-verso: #07abdd;
-    --destaque: #4b4658;
+    --fundo: #ffffff;
+    --cartao-frente: #B0E0E6;
+    --destaque: #000000;
     --preto: #000000;
     --branco: #ffffff;
 }
+
 body{
     background-color: var(--fundo);
     margin: 0;
 }
-header{
-    background-color: var(--fundo);
-    color: var(--fundo);
-    padding: 2rem;
+header {
+    background-color: var(--preto);
     display: flex;
     justify-content: space-around;
+    padding: 2rem;
 }
 header a{
+    color:var(--branco);
     text-decoration: none;
-    color: var(--branco);
 }
 footer{
+    background-color: var(--preto);
     position: fixed;
-bottom: 0;
-background-color: var(--preto);
-color: var(--branco);
-width: 100%;
-text-align: center;
-
+    bottom: 0;
+    color: var(--branco);
+    width: 100%;
+    text-align: center;
 }
+
 #container{
-    display: flex;
     padding: 4rem;
+    display: flex;
     gap: 3rem;
+    align-items: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
+
 .cartao{
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
-    margin: 1rem;
     height: 20rem;
+    margin: 1rem;
+
 }
+
 .conteudo-cartao{
     background-color: var(--cartao-frente);
-    text-align: center;
     height: 100%;
+    text-align: center;
+    /* color: var(--branco); */
     transform-style: preserve-3d;
-transition: transform 300ms ease-in-out;    
+    transition: transform 300ms ease-in-out;
 }
+
 .conteudo-cartao h3{
     color: var(--destaque);
     border: 1px solid var(--destaque);
     position: absolute;
-    text-align: left;
     margin: 0.5rem;
-    border-radius: 0.5rem;
+    padding: 0.5rem;
+    text-align: left;
+    border-radius: 0.6rem;
     font-size: 1vw;
     backface-visibility: hidden;
 }
+
 .conteudo-cartao p{
     margin-top: 4rem;
-    font-size: 1.4rem;
     pad: 2rem;
+    font-size: 1.4rem;
 }
+
 .pergunta-cartao{
     font-weight: 500;
 }
+
 .resposta-cartao{
     font-weight: 700;
     color: var(--destaque);
-}
-.cartao.active .conteudo-cartao{
-    transform: rotateY(180deg);
-}
-.pergunta-cartao, .resposta-cartao{
-    backface-visibility: hidden;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
-}
-.resposta-cartao{
     transform: rotateY(180deg);
     background-color: var(--cartao-verso);
     border: 2px solid var(--destaque);
+}
+
+.cartao.active .conteudo-cartao{
+    transform: rotateY(180deg)
+}
+
+.pergunta-cartao, .resposta-cartao{
+backface-visibility: hidden;
+position: absolute;
+height: 100%;
+width: 100%;
 }
