--- a/projeto2.css
+++ b/projeto2.css
@@ -11,6 +11,18 @@ body{
     margin: 0;
 }
 
+header{
+background-color: var(--preto);
+display: flex;
+justify-content: space-around;
+padding: 2rem;
+}
+
+header a{
+    color: var(--branco);
+    text-decoration: none;
+}
+
 footer{
     position: fixed;
 bottom: 0;
