--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
-    --fundo: #ffffff;
-    --cartao-frente: #B0E0E6;
-    --destaque: #000000;
+    --fundo: #31beff;
+    --cartao-frente: #006eec;
+    --destaque: #252525;
     --preto: #000000;
     --branco: #ffffff;
 }
