--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
-    --fundo: #31beff;
-    --cartao-frente: #006eec;
+    --fundo: #76d4ff;
+    --cartao-frente: #489dff;
     --destaque: #252525;
     --preto: #000000;
     --branco: #ffffff;
