--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --fundo: #76d4ff;
+    --fundo: #b7e8ff;
     --cartao-frente: #489dff;
     --destaque: #252525;
     --preto: #000000;
