--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --fundo: #b7e8ff;
-    --cartao-frente: #489dff;
+    --cartao-frente: a#5578a0;
     --destaque: #252525;
     --preto: #000000;
     --branco: #ffffff;
