--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --fundo: #b7e8ff;
-    --cartao-frente: #5578a0;
+    --cartao-frente: #77a3d4;
     --destaque: #252525;
     --preto: #000000;
     --branco: #ffffff;
