--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --fundo: #b7e8ff;
+    --fundo: #f0faff;
     --cartao-frente: #77a3d4;
     --destaque: #252525;
     --preto: #000000;
