--- a/projeto2.css
+++ b/projeto2.css
@@ -1,7 +1,7 @@
 :root{
-    --fundo :#ffffff;
-    --cartao-frente: #B0E0E6;
-    --cartao-verso: #000000;
+    --fundo :#cff0ff;
+    --cartao-frente: #77a3d4;
+    --cartao-verso: #216a8b;
     --destaque: #000000;
     --preto: #000000;
     --branco: #ffffff;
