--- a/projeto2.css
+++ b/projeto2.css
@@ -51,7 +51,7 @@ footer{
 
 .resposta-cartao{
     background-color: var(--cartao-verso);
-    color: var(--branco);
+    color: var(--preto);
     padding: 40px;
     margin-top: 15px;
     display: none;
