--- a/projeto2.css
+++ b/projeto2.css
@@ -1,7 +1,7 @@
 :root{
     --fundo :#cff0ff;
     --cartao-frente: #77a3d4;
-    --cartao-verso: #5e6d94;
+    --cartao-verso: #5f8397;
     --destaque: #000000;
     --preto: #000000;
     --branco: #ffffff;
